simplify app.js (client-side) code and add clarifying in-line comments

--- a/lib/chat_web/templates/layout/app.html.eex
+++ b/lib/chat_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Chat!</title>
+    <title>Phoenix Chat Example!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
@@ -16,7 +16,7 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <img src="https://i.imgur.com/omw27gW.png" style="height:80px; margin-top: -20px">
           </ul>
         </nav>
         <span class="logo"></span>
@@ -30,7 +30,6 @@
       </main>
 
     </div> <!-- /container -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
