--- a/lib/chat_web/templates/page/index.html.eex
+++ b/lib/chat_web/templates/page/index.html.eex
@@ -1,5 +1,8 @@
 <!-- The list of messages will appear here: -->
-<ul id='msg-list' class='row' style='list-style: none; min-height:200px; padding: 10px;'></ul>
+<ul id='msg-list' class='row'
+  style='list-style: none; min-height:200px; border: 1px solid #e5e5e5;
+margin: 10px; padding: 10px;'> <!-- don't worry, "in-line styles" are temp! -->
+</ul>
 
 <div class="row">
   <div class="col-xs-3">
