--- a/lib/chat_web/templates/page/index.html.eex
+++ b/lib/chat_web/templates/page/index.html.eex
@@ -1,8 +1,16 @@
+<div class="row">
+  <div class="col-xs-12 col-sm-3">
+    <ul id="online-users" style="list-style: none; min-height:200px;
+    border: 1px solid #e5e5e5; padding: 10px">
+    <li class="text-left"><b><u>Online users</u></b></li>
+  </ul>
+</div>
 <!-- The list of messages will appear here: -->
-<ul id="msg-list" style="list-style: none; min-height:200px;
-  border: 1px solid #e5e5e5; margin: 10px; padding: 10px;">
+<div class="col-xs-12 col-sm-9">
+  <ul id="msg-list" style="list-style: none; min-height:200px;
+  border: 1px solid #e5e5e5; padding: 10px">
   <%= for m <- @messages do %>
-    <li id="<%= m.id %>"><b> <%= m.name %> </b> <%= m.message %> </li>
+  <li id="<%= m.id %>"><b> <%= m.name %> </b> <%= m.message %> </li>
   <% end %>
 </ul>
 
@@ -13,4 +21,6 @@
   <div class="col-xs-9">
     <input type="text" id="msg" class="form-control" placeholder="Your Message">
   </div>
+</div>
+</div>
 </div>
