--- a/lib/chat_web/templates/page/index.html.eex
+++ b/lib/chat_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <!-- The list of messages will appear here: -->
 <ul id='msg-list'> </ul>
 
-<footer class="container">
+<footer>
   <input type="text" id="name" placeholder="Your Name" autofocus>
   <input type="text" id="msg" placeholder="Your Message">
 </footer>
@@ -32,5 +32,6 @@
     bottom: 10px;
     height: 50px;
     z-index: 2;
+    width: 95%;
   }
 </style>
