--- a/lib/chat_web/templates/page/index.html.eex
+++ b/lib/chat_web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <!-- The list of messages will appear here: -->
 <ul id='msg-list'> </ul>
 
-<footer>
+<footer class="footer">
   <input type="text" id="name" placeholder="Your Name" autofocus>
   <input type="text" id="msg" placeholder="Your Message">
 </footer>
@@ -28,11 +28,18 @@
     font-size: 1.3em;
   }
 
-  footer {
-    position:fixed;
-    bottom: 10px;
-    height: 50px;
-    z-index: 2;
-    width: 95%;
+  @media (max-width: 599px) { 
+    #name {
+      width: 100%;
+      margin-left: 0;
+    }
+    #msg {
+      width: 100%;
+      margin-left: 0;
+    }
+    #name, #msg {
+      border: 1px black solid;
+      font-size: 1.3em;
+    } 
   }
 </style>
