fix: Fixing logged in user not fallbacking to guest.

--- a/lib/chat_web/templates/page/index.html.heex
+++ b/lib/chat_web/templates/page/index.html.heex
@@ -13,6 +13,7 @@
             rounded transition ease-in-out m-0
             focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
           "
+          id="name"
           placeholder={@person.givenName}
           value={@person.givenName}
           disabled
