--- a/lib/chat_web/templates/page/index.html.heex
+++ b/lib/chat_web/templates/page/index.html.heex
@@ -15,8 +15,8 @@
               focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
             "
             id="name"
-            placeholder={@person.givenName}
-            value={@person.givenName}
+            placeholder={person_name(@person)}
+            value={person_name(@person)}
             disabled
           />
         <% else %>
