--- a/lib/chat_web/templates/page/index.html.heex
+++ b/lib/chat_web/templates/page/index.html.heex
@@ -3,7 +3,7 @@
   <ul id='msg-list' phx-update="append" class="pa-1">
 
   </ul>
-  <footer class="bg-slate-300 p-4 h-[8rem] fixed bottom-0 w-full flex flex-col justify-center">
+  <footer class="bg-slate-300 p-2 h-[6rem] fixed bottom-0 w-full flex flex-col justify-center">
     <div class="flex flex-row justify-center items-center">
       <div class="flex-grow mr-5">
         <%= if @loggedin do %>
@@ -43,21 +43,12 @@
         />
       </div>
 
-      <button
-          id="send_btn"
-          class="inline-flex items-center justify-center w-12 h-12 mr-2 text-pink-100 transition-colors duration-150 bg-[#00a5ff] rounded-full focus:shadow-outline hover:bg-[#027bbc]">
-        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" height="50px" width="50px"
-          viewBox="0 0 495.003 495.003" style="enable-background:new 0 0 495.003 495.003; filter: invert(1); scale: 50%" xml:space="preserve">
-          <g id="XMLID_51_">
-          <path id="XMLID_53_" d="M164.711,456.687c0,2.966,1.647,5.686,4.266,7.072c2.617,1.385,5.799,1.207,8.245-0.468l55.09-37.616
-            l-67.6-32.22V456.687z"/>
-          <path id="XMLID_52_" d="M492.431,32.443c-1.513-1.395-3.466-2.125-5.44-2.125c-1.19,0-2.377,0.264-3.5,0.816L7.905,264.422
-            c-4.861,2.389-7.937,7.353-7.904,12.783c0.033,5.423,3.161,10.353,8.057,12.689l125.342,59.724l250.62-205.99L164.455,364.414
-            l156.145,74.4c1.918,0.919,4.012,1.376,6.084,1.376c1.768,0,3.519-0.322,5.186-0.977c3.637-1.438,6.527-4.318,7.97-7.956
-            L494.436,41.257C495.66,38.188,494.862,34.679,492.431,32.443z"/>
-          </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g>
-        </svg>
+
+      <button id="send"
+        class="text-white rounded-xl px-4 py-2 float-right transition-colors duration-150 bg-[#00a5ff] focus:shadow-outline hover:bg-[#027bbc]">
+      Send
       </button>
+
     </div>
   </footer>
 </div>
