--- a/lib/chat_web/templates/page/index.html.heex
+++ b/lib/chat_web/templates/page/index.html.heex
@@ -1,52 +1,41 @@
-
-<div class="mt-2 mb-2 pb-[8rem]">
-  <ul id='msg-list' phx-update="append" class="pa-1">
-
-  </ul>
-  <footer class="bg-slate-300 p-2 h-[6rem] fixed bottom-0 w-full flex flex-col justify-center">
-    <div class="flex flex-row justify-center items-center">
-      <div class="flex-grow mr-5">
-        <%= if @loggedin do %>
-          <input
-            type="text"
-            class="hidden form-control w-full px-3 py-1.5 text-base font-normal
-              text-gray-700bg-gray-100 bg-clip-padding border border-solid border-gray-300
-              rounded transition ease-in-out m-0
-              focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
-            "
-            id="name"
-            placeholder={person_name(@person)}
-            value={person_name(@person)}
-            disabled
-          />
-        <% else %>
-          <input
-            type="text"
-            class=" form-control block w-full px-3 py-1.5 text-base font-normal
-              text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300
-              rounded transition ease-in-out m-0
-              focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
-            "
-            id="name"
-            placeholder="Your name"
-          />
-        <% end %>
+<div class="my-2">
+  <ul id='msg-list' phx-update="append" class="pa-1"> </ul>
+  <footer class="bg-slate-800 p-2 h-[3rem] fixed bottom-0 w-full flex justify-center">
+    <div class="w-full flex flex-row items-center">
+      <%= if @loggedin do %>
+        <input type="text" disabled class="hidden" id="name"
+          placeholder={person_name(@person)} value={person_name(@person)}
+        />
+      <% else %>
         <input
           type="text"
-          class="form-control block w-full px-3 py-1.5 text-base font-normal
-            text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300
-            rounded transition ease-in-out m-0
-            focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
-          "
-          id="msg"
-          placeholder="Your message"
+          class="grow-0 w-1/6 px-1.5 py-1.5 text-base font-normal
+            text-gray-700 bg-white bg-clip-padding
+            border border-solid border-gray-300 rounded
+            transition focus:text-gray-700 focus:border-blue-600 focus:outline-none
+            "
+          id="name"
+          placeholder="Name"
+          required="required"
         />
-      </div>
+      <% end %>
 
+      <input
+        type="text"
+        class="grow w-2/3 mx-2 px-2 py-1.5 text-base font-normal
+          text-gray-700 bg-white bg-clip-padding
+          border border-solid border-gray-300 rounded
+          transition ease-in-out focus:border-blue-600 focus:outline-none
+          "
+        id="msg"
+        placeholder="Your message"
+        required="required"
+      />
 
       <button id="send"
-        class="text-white rounded-xl px-4 py-2 float-right transition-colors duration-150 bg-[#00a5ff] focus:shadow-outline hover:bg-[#027bbc]">
-      Send
+        class="text-white rounded-xl px-3 py-1.5
+          transition-colors duration-150 bg-sky-500 hover:bg-sky-600">
+        Send
       </button>
 
     </div>
