--- a/lib/chat_web/components/layouts/root.html.heex
+++ b/lib/chat_web/components/layouts/root.html.heex
@@ -17,6 +17,26 @@
         <h1 class="w-4/5 md:text-3xl text-center font-mono text-white">
           Phoenix Chat Example
         </h1>
+        <div class="float-right mr-3">
+          <%= if @loggedin do %>
+            <div class="flex flex-row justify-center items-center">
+              <img width="42px" src={@person.picture} class="rounded-full"/>
+              <.link
+                class= "bg-red-600 text-white rounded px-2 py-2 ml-2 mr-1"
+                href="/logout"
+              >
+                Logout
+              </.link>
+            </div>
+          <% else %>
+              <.link
+                class="bg-green-500 text-white rounded px-3 py-2 w-full font-bold"
+                href="/login"
+              >
+                Login
+              </.link>
+          <% end %>
+        </div>
       </div>
     </header>
     <main class="mt-[4rem]">
