--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -4,8 +4,14 @@
 
 <footer class="bg-slate-800 p-2 h-[3rem] fixed bottom-0 w-full flex justify-center">
   <div class="w-full flex flex-row items-center text-gray-700 focus:outline-none font-normal">
-    <input type="text" id="name" placeholder="Name" required
+    <%= if @loggedin do %>
+      <input type="text" disabled class="hidden" id="name"
+        placeholder={person_name(@person)} value={person_name(@person)}
+      />
+    <% else %>
+      <input type="text" id="name" placeholder="Name" required
         class="grow-0 w-1/6 px-1.5 py-1.5"/>
+    <% end %>
 
     <input type="text" id="msg" placeholder="Your message" required
       class="grow w-2/3 mx-1 px-2 py-1.5"/>
