--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -2,7 +2,7 @@
 <ul id='msg-list' phx-update="append" class="pa-1">
 </ul>
 
-<footer class="bg-slate-800 p-2 h-[3rem] fixed bottom-0 w-full flex justify-center">
+<footer class="bg-slate-800 p-2 h-[3rem] bottom-0 w-full flex justify-center sticky">
   <div class="w-full flex flex-row items-center text-gray-700 focus:outline-none font-normal">
     <%= if @loggedin do %>
       <input type="text" disabled class="hidden" id="name"
