fix: Fixing scrolling and UI footer sticky. #158

--- a/lib/chat_web/components/layouts/root.html.heex
+++ b/lib/chat_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white antialiased">
+  <body class="bg-white antialiased min-h-screen flex flex-col">
     <header class="bg-slate-800 w-full h-[4rem] top-0 fixed flex flex-col justify-center z-10">
       <div class="flex flex-row justify-center items-center">
         <h1 class="w-4/5 md:text-3xl text-center font-mono text-white">
@@ -36,8 +36,6 @@
         </div>
       </div>
     </header>
-    <main class="mt-[4rem]">
-      <%= @inner_content %>
-    </main>
+    <%= @inner_content %>
   </body>
 </html>
