--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -1,8 +1,8 @@
 <!-- Shown only on mobile devices -->
-<div class="mt-[5rem] pt-4 pl-4 pr-4 ml-4 mr-4 mb-4 border-2 radius rounded-md lg:hidden">
-  <div class="flex justify-start overflow-hidden whitespace-nowrap">
+<div class="mt-[5rem] p-4 ml-4 mr-4 mb-4 border-2 radius rounded-md lg:hidden">
+  <div class="flex justify-start flex-col overflow-hidden whitespace-nowrap">
     <h5 class="text-md leading-tight font-medium mb-2 text-green-700">Users online</h5>
-    <ul id="users_online-list" phx-update="append" class="pa-1 mt-[4rem]">
+    <ul id="users_online-list-mobile" phx-update="append" class="pa-1">
     </ul>
   </div>
 </div>
@@ -50,13 +50,10 @@
 
     <!-- Online users will only be shown here on desktop devices -->
     <div class="hidden lg:flex">
-      <div class="mt-[5rem] pt-4 pl-4 pr-4 ml-4 mr-4 mb-4 border-2 radius rounded-md max-w-[20vw]">
+      <div class="mt-[5rem] p-4 ml-4 mr-4 mb-4 border-2 radius rounded-md max-w-[20vw]">
         <div class="flex justify-start flex-col overflow-hidden whitespace-nowrap">
           <h5 class="text-md leading-tight font-medium mb-2 text-green-700">Users online</h5>
-          <ul id="users_online-list" phx-update="append" class="pa-1">
-            <li>
-              <span>ausapdijasiudhcasdojasiudouhygisduhdaijok</span>
-            </li>
+          <ul id="users_online-list-desktop" phx-update="append" class="pa-1">
           </ul>
         </div>
       </div>
