rename "user" to "people" as per: https://github.com/dwyl/phoenix-chat-example/pull/165#issuecomment-1430549041

--- a/lib/chat_web/controllers/page_html/home.html.heex
+++ b/lib/chat_web/controllers/page_html/home.html.heex
@@ -1,8 +1,8 @@
 <!-- Shown only on mobile devices -->
 <div class="mt-[5rem] p-4 ml-4 mr-4 mb-4 border-2 radius rounded-md lg:hidden">
   <div class="flex justify-start flex-col overflow-hidden whitespace-nowrap">
-    <h5 class="text-md leading-tight font-medium mb-2 text-green-700">Users online</h5>
-    <ul id="users_online-list-mobile" phx-update="append" class="pa-1"></ul>
+    <h5 class="text-md leading-tight font-medium mb-2 text-green-700">people online</h5>
+    <ul id="people_online-list-mobile" phx-update="append" class="pa-1"></ul>
   </div>
 </div>
 
@@ -50,12 +50,12 @@
       </div>
     </footer>
   </div>
-  <!-- Online users will only be shown here on desktop devices -->
+  <!-- Online people will only be shown here on desktop devices -->
   <div class="hidden lg:flex">
     <div class="mt-[5rem] p-4 ml-4 mr-4 mb-4 border-2 radius rounded-md max-w-[20vw]">
       <div class="flex justify-start flex-col overflow-hidden whitespace-nowrap">
-        <h5 class="text-md leading-tight font-medium mb-2 text-green-700">Users online</h5>
-        <ul id="users_online-list-desktop" phx-update="append" class="pa-1"></ul>
+        <h5 class="text-md leading-tight font-medium mb-2 text-green-700">people online</h5>
+        <ul id="people_online-list-desktop" phx-update="append" class="pa-1"></ul>
       </div>
     </div>
   </div>
